<resources>
    <string name="app_name">Emergency Application</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_other">Other</string>
    <string name="injured">Are there people injured ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="callback">Immediate Callback</string>
    <string name="description">Provide a short description :</string>
    <string name="submit">Submit Emergency Request</string>
    <string name="gps_network_not_enabled">GPS network is not enabled</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="Cancel">Cancel</string>
</resources>
